# projeto-preco

./: .env.example  .gitignore  CLAUDE.md  PLANO.md  README.md  SMART-PRICE-TRACKER.md  iniciar-projeto.command.md  plano.md  plano2.md  plano_cupons.md  pyproject.toml
docs/: DESIGN-SUMMARY.md  SMART-PRICE-TRACKER.md
src/: config.py
src/adapters/: __init__.py
src/adapters/classificadores/: __init__.py  llm.py
src/application/: __init__.py  buscadores.py  buscar_produto.py  classificadores.py  coletores.py  repositorios.py
src/domain/: __init__.py  cashback.py  cupom.py  dinheiro.py  oferta.py  preco_final.py  produto.py  referencia.py  sku.py
src/interface/: __init__.py  api.py  cli.py
tests/componente/: test_api.py  test_buscar_produto.py  test_cli_rastrear.py  test_coletor_google_shopping.py  test_coletor_kabum.py  test_coletor_mercado_livre.py  test_coletor_sandbox.py  test_coletor_vtex.py  test_extrator_llm.py  test_extrator_pagina.py  test_repositorio_sqlite.py
tests/domain/: test_cashback.py  test_cupom.py
tests/fixtures/: google_shopping_busca.json  kabum_busca.json  mercado_livre_busca.json  sandbox_busca.json  vtex_busca.json
tests/matching_dataset/: pares.json  test_regressao_matching.py
tests/unit/: test_buscador_cupons_serper_llm.py  test_classificador_llm.py  test_config.py  test_descricao_busca.py  test_dinheiro.py  test_extrator_heuristica.py  test_extrator_slug.py  test_extrator_titulo.py  test_matcher.py  test_matcher_acessorio.py  test_matcher_modelo.py  test_normalizacao.py  test_preco_final.py  test_produto.py
web/: .gitignore  README.md  package-lock.json  package.json
web/app/: globals.css  layout.js  nav.js  page.js
web/app/lib/: api.js
(+24 files in other folders)
